--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "graphql": "^0.13.0",
-    "graphql-tools": "^2.20.2"
+    "graphql-tools": "^2.20.2",
+    "sequelize": "^4.33.4"
   }
 }
