--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-3": "^6.24.1",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
-    "nodemon": "^1.14.12"
+    "nodemon": "^1.17.3"
   },
   "dependencies": {
     "apollo-server-express": "^1.3.2",
@@ -24,6 +25,7 @@
     "express": "^4.16.2",
     "graphql": "^0.13.0",
     "graphql-tools": "^2.20.2",
+    "merge-graphql-schemas": "^1.5.1",
     "pg": "^7.4.1",
     "sequelize": "^4.33.4"
   }
